deploy: 83675db283fa8416233375bc2c64f9915ffd9062

--- a/tutorials/g_td_sim/index.html
+++ b/tutorials/g_td_sim/index.html
@@ -320,7 +320,7 @@ RHS compiled
 (7072, 94)
 </code></pre></div>
 <h2 id="epi">EPI</h2>
-<p>The energy-based plasmonicity index is a quantity to characterize the steady-state plasmonicity. We use plane wave illumination to drive the system into a steady state and then compute the EPI</p>
+<p>The energy-based plasmonicity index introduced by <a href="https://pubs.acs.org/doi/10.1021/acs.jpcc.0c07964">Müller et al.</a> is a quantity to characterize the steady-state plasmonicity. We use plane wave illumination to drive the system into a steady state and then compute the EPI.</p>
 <div class="language-python highlight"><pre><span></span><code><span id="__span-14-1"><a id="__codelineno-14-1" name="__codelineno-14-1" href="#__codelineno-14-1"></a><span class="kn">import</span><span class="w"> </span><span class="nn">jax.numpy</span><span class="w"> </span><span class="k">as</span><span class="w"> </span><span class="nn">jnp</span>
 </span><span id="__span-14-2"><a id="__codelineno-14-2" name="__codelineno-14-2" href="#__codelineno-14-2"></a><span class="kn">from</span><span class="w"> </span><span class="nn">granad</span><span class="w"> </span><span class="kn">import</span> <span class="n">Wave</span>
 </span><span id="__span-14-3"><a id="__codelineno-14-3" name="__codelineno-14-3" href="#__codelineno-14-3"></a>
