--- a/tutorials/c_plotting/index.html
+++ b/tutorials/c_plotting/index.html
@@ -144,8 +144,9 @@
 </span></code></pre></div>
 <p><img alt="png" src="../c_plotting_files/c_plotting_6_0.png" /></p>
 <h2 id="simulation-output">Simulation output</h2>
-<p>There is a dedicated function for showing time-domain simulation results. Let's illustrate this by tracking the current considering the previously defined flake under x-polarized Gaussian pulsed illumination, which in GRANAD's units is equivalent to the velocity operator given by</p>
+<p>There is a dedicated function for showing time-domain simulation results. Let's illustrate this by tracking the current considering the previously defined flake under x-polarized Gaussian pulsed illumination, which in GRANAD's units is equivalent to the velocity operator given by the commutator of the system hamiltonian <span class="arithmatex">\(H\)</span> and the polarization operator <span class="arithmatex">\(P\)</span></p>
 <div class="arithmatex">\[\bf{v} = \frac{-i}{\hbar} [H, \bf{P}]\]</div>
+<p>The time-dependent induced current (density) is given by the expectation value of the current density operator <span class="arithmatex">\(j\)</span>, which is related to the velocity operator as <span class="arithmatex">\(j = ev\)</span>. In GRANAD's units, setting the elementary charge <span class="arithmatex">\(e = 1\)</span>, the velocity operator is thus identical to the current density operator, with which we can immediately evalute the induced currents due to the external field.</p>
 <div class="language-python highlight"><pre><span></span><code><span id="__span-2-1"><a id="__codelineno-2-1" name="__codelineno-2-1" href="#__codelineno-2-1"></a><span class="kn">from</span><span class="w"> </span><span class="nn">granad</span><span class="w"> </span><span class="kn">import</span> <span class="n">Pulse</span>
 </span><span id="__span-2-2"><a id="__codelineno-2-2" name="__codelineno-2-2" href="#__codelineno-2-2"></a><span class="n">pulse</span> <span class="o">=</span> <span class="n">Pulse</span><span class="p">(</span>
 </span><span id="__span-2-3"><a id="__codelineno-2-3" name="__codelineno-2-3" href="#__codelineno-2-3"></a>    <span class="n">amplitudes</span><span class="o">=</span><span class="p">[</span><span class="mf">1e-5</span><span class="p">,</span> <span class="mi">0</span><span class="p">,</span> <span class="mi">0</span><span class="p">],</span> <span class="n">frequency</span><span class="o">=</span><span class="mf">2.3</span><span class="p">,</span> <span class="n">peak</span><span class="o">=</span><span class="mi">5</span><span class="p">,</span> <span class="n">fwhm</span><span class="o">=</span><span class="mi">2</span>
@@ -161,28 +162,30 @@
 </span><span id="__span-2-13"><a id="__codelineno-2-13" name="__codelineno-2-13" href="#__codelineno-2-13"></a><span class="n">flake</span><span class="o">.</span><span class="n">show_res</span><span class="p">(</span> <span class="n">result</span><span class="p">,</span> <span class="n">plot_labels</span> <span class="o">=</span> <span class="n">plot_labels</span> <span class="p">)</span>
 </span></code></pre></div>
 <div class="language-text highlight"><pre><span></span><code>RHS compiled
+
+
 RHS compiled
 
 
 100.0 %
 </code></pre></div>
-<p><img alt="png" src="../c_plotting_files/c_plotting_10_2.png" /></p>
+<p><img alt="png" src="../c_plotting_files/c_plotting_11_3.png" /></p>
 <p>A detailed description of parameters to the Gaussian pulse is given in the electric fields tutorial.</p>
 <p>We can also Fourier transform the result to obtain the frequency domain result by specifying the omega limits</p>
 <div class="language-python highlight"><pre><span></span><code><span id="__span-3-1"><a id="__codelineno-3-1" name="__codelineno-3-1" href="#__codelineno-3-1"></a><span class="n">flake</span><span class="o">.</span><span class="n">show_res</span><span class="p">(</span> <span class="n">result</span><span class="p">,</span> <span class="n">omega_max</span> <span class="o">=</span> <span class="mi">5</span><span class="p">,</span> <span class="n">omega_min</span> <span class="o">=</span> <span class="mi">0</span><span class="p">,</span> <span class="n">plot_labels</span> <span class="o">=</span> <span class="n">plot_labels</span> <span class="p">)</span>
 </span></code></pre></div>
-<p><img alt="png" src="../c_plotting_files/c_plotting_13_0.png" /></p>
-<p>Note that the sparsity of the spectral grid ows to the sparse sampling in time domain which we have chosen for demonstrational purposes. A real simulation requires more careful refinement of the temporal grid.</p>
+<p><img alt="png" src="../c_plotting_files/c_plotting_14_0.png" /></p>
+<p>Note that the sparsity of the spectral grid ows to the sparse sampling in time domain which we have chosen for demonstrational purposes. A real simulation requires more careful refinement of the temporal grid. A finer temporal grid or longer integration time generally results in higher quality spectra.</p>
 <h2 id="space-dependent-arrays">Space-dependent arrays</h2>
 <p>The functions show_2d and show_3d are a bit more versatile than initially indicated.</p>
 <p>If we supply a "display" argument, we can plot an arbitrary array on the grid spanned by the orbitals and filter it by orbital tags. Let's demonstrate this by visualizing the lowest energy single-particle state of the flake</p>
 <div class="language-python highlight"><pre><span></span><code><span id="__span-4-1"><a id="__codelineno-4-1" name="__codelineno-4-1" href="#__codelineno-4-1"></a><span class="n">flake</span><span class="o">.</span><span class="n">show_2d</span><span class="p">(</span> <span class="n">display</span> <span class="o">=</span> <span class="n">flake</span><span class="o">.</span><span class="n">eigenvectors</span><span class="p">[:,</span> <span class="mi">0</span><span class="p">]</span> <span class="p">)</span>
 </span></code></pre></div>
-<p><img alt="png" src="../c_plotting_files/c_plotting_18_0.png" /></p>
+<p><img alt="png" src="../c_plotting_files/c_plotting_19_0.png" /></p>
 <p>If you want a normalized plot of the absolute values, do</p>
 <div class="language-python highlight"><pre><span></span><code><span id="__span-5-1"><a id="__codelineno-5-1" name="__codelineno-5-1" href="#__codelineno-5-1"></a><span class="n">flake</span><span class="o">.</span><span class="n">show_2d</span><span class="p">(</span> <span class="n">display</span> <span class="o">=</span> <span class="n">flake</span><span class="o">.</span><span class="n">eigenvectors</span><span class="p">[:,</span> <span class="mi">0</span><span class="p">],</span> <span class="n">scale</span> <span class="o">=</span> <span class="kc">True</span> <span class="p">)</span>
 </span></code></pre></div>
-<p><img alt="png" src="../c_plotting_files/c_plotting_20_0.png" /></p>
+<p><img alt="png" src="../c_plotting_files/c_plotting_21_0.png" /></p>
 <p>Additionally, if you supply the keyword argument name = "MY-PLOT-NAME.pdf" to any plotting function, the plot will not be displayed, but instead saved to disk in the directory you invoked Python.</p>
               
             </div>
